# NG12-Cancer-Risk_Assessor-VertexAi

./: .env.template  .gitignore  Dockerfile  PROMPTS.md  README.md  Technical-Assessment.txt  debug_similarity.py  docker-compose.yml  docker-start.sh  nginx.conf  pyproject.toml  requirements.txt  start_server.py  system-prompts-strategy.md  test_assessment_api.py
.github/workflows/: ci.yml
data/: patients.json
frontend/: index.html
gemini-chats/: done-notDone.md  gemini-status.md  required-deliverables.md
next/: Begin-here.md  gpt-0-plan.md  phase-by-phase.md
scripts/: initialize_vector_store.py
src/: __init__.py  assessment_engine.py  chat_engine.py  embedding_service.py  gemini_agent.py  main.py  models.py  patient_loader.py  pdf_parser.py  rag_pipeline.py  vector_store.py
